# StarKit

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  PRD.md  README.en.md  README.md  ROADMAP.md  ci.sh  starkit-prd-v0.1-zh.md
crates/starkit-cli/: CLAUDE.md  Cargo.toml
crates/starkit-cli/src/: bench.rs  exit.rs  main.rs  pipeline.rs  preset.rs  report.rs
crates/starkit-cli/tests/: cli_ac.rs
crates/starkit-core/: CLAUDE.md  Cargo.toml
crates/starkit-core/src/: background.rs  detect.rs  gate.rs  lib.rs  mask.rs  reduce.rs  types.rs
crates/starkit-core/tests/: background_ac.rs  detect_ac.rs  gate_ac.rs  mask_ac.rs  reduce_ac.rs  resynth_ac.rs  schema_v1.rs
crates/starkit-fixtures/: Cargo.toml
crates/starkit-fixtures/src/: catalog.rs  emit.rs  field.rs  foreground.rs  icc.rs  lib.rs  main.rs  params.rs  psf.rs  render.rs  suite.rs
crates/starkit-fixtures/tests/: acceptance.rs
crates/starkit-io/: CLAUDE.md  Cargo.toml
crates/starkit-io/src/: atomic.rs  decode.rs  encode.rs  error.rs  exif.rs  icc.rs  image.rs  lib.rs
crates/starkit-io/tests/: fr1.rs
docs/: CORPUS.md  DECISIONS.md  FIXTURES.md  PRD-zh.md
docs/qa/: README.md  TEMPLATE.md
fixtures/: README.md
fixtures/expected/: MANIFEST.sha256
fixtures/expected/basic-5k/: params.json  truth.json
fixtures/expected/bench/: basic-61mp.json
fixtures/expected/dense-core/: params.json
fixtures/expected/nightscape-fg/: params.json  truth.json
fixtures/expected/pairs/: params.json  truth.json
fixtures/expected/reports/: basic-5k.json  dense-core.json  nightscape-fg.json  pairs.json  saturated.json
fixtures/expected/saturated/: params.json  truth.json
oracle/: CLAUDE.md  _common.py  compare.py  measure.py  requirements.txt  run_suites.py  test_oracle.py
tools/: make_previews.py
