[workspace]
resolver = "2"
members = [
    "crates/starkit-core",
    "crates/starkit-io",
    "crates/starkit-cli",
    "crates/starkit-fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
