[workspace]
resolver = "2"
members = [
    "crates/starkit-core",
    "crates/starkit-io",
    "crates/starkit-cli",
    "crates/starkit-fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# Q5 answered: public release under MIT (D-014, supersedes D-003). `publish`
# stays false — public source is not the same decision as a crates.io release.
license = "MIT"
publish = false

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip", "preserve_order"] }
