[package]
name = "starkit-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[[bin]]
name = "starkit"
path = "src/main.rs"

[dependencies]
starkit-core = { path = "../starkit-core" }
starkit-io = { path = "../starkit-io" }
serde.workspace = true
serde_json.workspace = true
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
tiff = "0.11.3"
