[package]
name = "starkit-core"
version.workspace = true
edition.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
thiserror = "2"
serde_json.workspace = true

[dev-dependencies]
tiff = "0.11.3"
# T1-3 grades detection through the real decoder (D-032). A dev-dependency only:
# starkit-core itself stays I/O-free (INV-7).
starkit-io = { path = "../starkit-io" }
